<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.backbase.assignment.ui.moviedetails.MovieDetail" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash"
        android:orientation="vertical">

        <include
            android:id="@+id/loading_view"
            layout="@layout/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />

        <include
            android:id="@+id/error_view"
            layout="@layout/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/close_view"
                android:padding="8dp"
                android:src="@drawable/ic_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#ffffff" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/movie_title_sample"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/close"
                app:layout_constraintStart_toEndOf="@+id/close"
                app:layout_constraintTop_toTopOf="@+id/close" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_container"
                android:layout_width="206dp"
                android:layout_height="290dp"
                android:layout_marginTop="21dp"
                app:cardCornerRadius="13dp"
                app:cardElevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title">

                <ImageView
                    android:id="@+id/movie_image"
                    setMovieImage="@{movie.movieImageUrl}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/movie_sample" />

            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:id="@+id/movie_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/bg_movie_language"
                android:padding="5dp"
                android:textColor="#ffffff"
                android:text="@{movie.language}"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_overview"
                tools:text="@string/movie_language_sample" />

            <TextView
                android:id="@+id/released_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/released_date_tag"
                android:textColor="#ffbbbbbb"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_container" />

            <TextView
                android:id="@+id/released_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@{movie.movieReleaseDate}"
                android:textColor="#ffffff"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/released_tag"
                app:layout_constraintStart_toEndOf="@+id/released_tag"
                app:layout_constraintTop_toTopOf="@+id/released_tag"
                tools:text="@string/movie_sample_release_date" />

            <TextView
                android:id="@+id/duration_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/duration"
                android:textColor="#ffbbbbbb"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/released_tag" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@{movie.movieDuration}"
                android:textColor="#ffffff"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/duration_tag"
                app:layout_constraintStart_toEndOf="@+id/duration_tag"
                app:layout_constraintTop_toTopOf="@+id/duration_tag"
                tools:text="@string/movie_sample_duration" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="3dp"
                android:text="@{movie.movieOverView}"
                android:textColor="#fffffcfc"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration_tag"
                tools:text="@string/movie_overview_sample" />

            <LinearLayout
                android:id="@+id/genre_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/movie_language"
                tools:layout_editor_absoluteX="0dp">

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</layout>
