<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.backbase.assignment.util.RatingUtil" />

        <variable
            name="viewModel"
            type="com.backbase.assignment.ui.mostpopular.MostPopularViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash"
        android:orientation="vertical">

        <include
            tools:visibility="gone"
            layout="@layout/loading_view"
            android:id="@+id/loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <include
            tools:visibility="gone"
            layout="@layout/error_view"
            android:id="@+id/error_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/most_popular"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/popular_movies_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.currentPopularMovie.movieTitle}"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_movies_view_pager"
            tools:text="Spider Man - No Way Home" />

        <TextView
            android:id="@+id/rating"
            ratingDrawable="@{RatingUtil.getMovieRatingValue(viewModel.currentPopularMovie.movieRating)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:drawablePadding="6dp"
            android:text="@{RatingUtil.getMovieRatingPercent(viewModel.currentPopularMovie.movieRating)}"
            android:textColor="@color/rating_text_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintStart_toStartOf="@+id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            tools:drawableStartCompat="@drawable/bg_high_rating"
            tools:text="75%" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="3dp"
            android:maxLines="3"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{viewModel.currentPopularMovie.movieOverView}"
            android:textAlignment="center"
            android:textColor="#fffffcfc"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:text="@string/movie_overview_sample" />

        <TextView
            android:id="@+id/seeMore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.1"
            android:text="@string/see_more"
            android:textAlignment="center"
            android:textColor="#ff6effc8"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overview" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/movie_detail_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="movie_title,overview,rating,seeMore"
            tools:layout_editor_absoluteX="201dp"
            tools:layout_editor_absoluteY="753dp" />

    </LinearLayout>

</layout>
